kubernetes/apps/default/transmission/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: server
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: "transmission"
    metallb.universe.tf/loadBalancerIPs: 192.168.2.204
  labels:
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: server
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: server
  ports:
    - protocol: TCP
      port: 51413
      targetPort: torrent-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "transmission"
    metallb.universe.tf/loadBalancerIPs: 192.168.2.204
  labels:
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: server
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/part-of: transmission
    app.kubernetes.io/name: transmission
    app.kubernetes.io/component: server
  ports:
    - protocol: UDP
      port: 51413
      targetPort: torrent-udp
